:bug: Fixed Nav Bug
Bug caused fixed nave to break at larger resolutions in the logo area

--- a/revitalize/components/Layout/Nav.scss
+++ b/revitalize/components/Layout/Nav.scss
@@ -1,48 +1,50 @@
 @import "../../styles/mixins";
-nav{
+nav {
+  display: flex;
+  justify-content: space-between;
+  max-height: 90px;
+  padding: 1.5% 4%;
+  @include fixedNav;
+  justify-content: space-around;
+  .logo {
     display: flex;
-    justify-content: space-between;
-    max-height: 90px;
-    padding: 1.5% 4%;
-    @include fixedNav;
-    justify-content: space-around;
-    .logo  {
-        display: flex;
-        max-width: 25%;
+    max-width: 25%;
+    height: 80%;
+    position: absolute;
+    top: 0.75%;
+    position: absolute;
+    left: 4%;
+    top: 16.5%;
 
-        
-        h2{
-           margin: auto;
-        }
-        img{
-            max-height:90px;
-        }
-        
+    img {
+      max-height: 90px;
     }
-    ul{
-        display: flex;
-        justify-content: space-evenly;
-        width: 75%;
-        li{
-            margin:auto;
 
-        }
-        button{
-            margin: auto 2%;
-            background: #4840ba;
-            padding: 1rem 2rem;
-            border-radius: 0.25rem;
-            color: white;
-            border:2% solid white;
-            width: 11rem;
-        }
-                .login{
-                    color: #4840ba;
-                    background: white;
-                    border: 3px solid #4840ba;
-                }
-                
+    h2 {
+      align-self: center;
+      margin-bottom: 0.5%;
     }
+  }
+  ul {
+    display: flex;
+    width: 90%;
+
+    li {
+      margin: auto;
+    }
+    button {
+      margin: auto 2%;
+      background: #4840ba;
+      padding: 1rem 2rem;
+      border-radius: 0.25rem;
+      color: white;
+      border: 2% solid white;
+      width: 11rem;
+    }
+    .login {
+      color: #4840ba;
+      background: white;
+      border: 3px solid #4840ba;
+    }
+  }
 }
-
-
