--- a/revitalize/styles/_mixins.scss
+++ b/revitalize/styles/_mixins.scss
@@ -1,10 +1,10 @@
-
-@mixin fixedNav{
-    position: fixed;
-    width: 100%;
-    max-height: 45px;
-    overflow: hidden;
-    background-color: #C4C4C4;
-    top: 0;
-    z-index: 100;
+@mixin fixedNav {
+  position: fixed;
+  width: 100%;
+  max-height: 45px;
+  overflow: hidden;
+  background-color: #c4c4c4;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
